Fixed an issue with field cutoff on long tree action forms

--- a/src/components/TreeActionPanel/View.scss
+++ b/src/components/TreeActionPanel/View.scss
@@ -2,7 +2,7 @@
 // @Date:   2017-03-14T16:09:51+11:00
 // @Email:  wahaj@southbanksoftware.com
 // @Last modified by:   chris
-// @Last modified time: 2017-05-31T09:43:31+10:00
+// @Last modified time: 2017-05-31T10:29:32+10:00
 @import '../../styles/_defaultTheme.scss';
 
 
@@ -14,6 +14,13 @@
   .form-scrollable {
     overflow-y: auto;
     overflow-x: hidden;
+  }
+
+  .form-scrollable:after {
+    display: block;
+    content: "";
+    width: 100%;
+    height: 50px;
   }
 
   .form-title {
@@ -137,7 +144,6 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    margin-left: -30px;
     background-color: $fieldGroupPrimaryBackground;
 
     button {
